--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
 
       <!-- BG 2 -->
-      <div class="content content--sticky bg-2">
+      <div class="content content--sticky bg-2 content--reverse">
         <div class="content__grid">
           <div class="content__textual">
             <h2 class="content__title titlle-2">
@@ -272,7 +272,7 @@
     </div>
 
     <!-- BG 4 -->
-    <div class="content content--sticky bg-4">
+    <div class="content content--sticky bg-4 content--reverse">
       <div class="content__grid">
         <div class="content__textual">
           <h2 class="content__title titlle-4">
@@ -307,7 +307,7 @@
     </div>
 
     <!-- BG 6 -->
-    <div class="content content--sticky bg-6">
+    <div class="content content--sticky bg-6 content--reverse">
       <div class="content__grid">
         <div class="content__textual">
           <h2 class="content__title titlle-6">
