--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </div>
 
         <div class="content__img-wrapper">
-          <div class="color_brand content__img content__img--large" id="collavoration"></div>
+          <div class="color_brand content__img F" id="collavoration"></div>
           <script src="js/demo4/6_animation.js"></script>
         </div>
       </div>
