--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
 
 
-      <nav class="menu-fullscreen menu--iris" id="fullscreen-menu">
+      <nav id="nav" class="nav menu-fullscreen menu--iris" id="fullscreen-menu">
         <button class="close-menu" id="close-menu" aria-label="Cerrar menú">✕</button>
         <a href="#" class="menu__item" data-scrollto="0" data-i18n="menu home"></a>
         <a href="#map" class="menu__item" data-i18n="menu about"></a>
@@ -154,7 +154,7 @@
       </div>
     </main>
     <!-- Sección brand -->
-    <section class="brand">
+    <section id="brand" class="brand">
       <script clas="branding" src="js/demo4/animation_brand.js"></script>
       <div class="scroll-animation">
         <img src="img/Scroll Down.gif" alt="scroll down">
@@ -388,7 +388,7 @@
       <p class="text-large_M"> <mark class="hx hx-3" data-i18n="text 2 of the to Action"></mark> </p>
       </p>
     </div>
-    <footer id="contact">
+    <!-- <footer id="contact">
       <div class="footer-container">
         <h3 class="hover-image" style="--img:url(../../img/4.png)">One "X" word (Explora)</h3>
         <h3 class="hover-image" style="--img:url(../../img/5.png)">Two "X" word (Experimenta)</h3>
@@ -400,7 +400,7 @@
           <a href="https://www.grupoindi.com/" target="_blank" rel="noopener noreferrer">Grupo INDI</a>
         </p>
       </div>
-    </footer>
+    </footer> -->
     <script src="js/imagesloaded.pkgd.min.js"></script>
   </body>
 
