--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body class="loading demo-4">
 
-<script>let resizeTimer;
+<!-- <script>let resizeTimer;
 
 window.addEventListener("resize", function () {
   clearTimeout(resizeTimer);
@@ -42,7 +42,7 @@ window.addEventListener("resize", function () {
     location.reload();
   }, 300); // espera 300ms después de que el usuario deja de redimensionar
 });
-</script>
+</script> -->
 
 
 
