--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
 
 <body class="loading demo-4">
 
-<!-- <script>let resizeTimer;
+<script>
+let resizeTimer;
 
-window.addEventListener("resize", function () {
-  clearTimeout(resizeTimer);
-  resizeTimer = setTimeout(() => {
-    location.reload();
-  }, 300); // espera 300ms después de que el usuario deja de redimensionar
-});
-</script> -->
+function shouldEnableReload() {
+  // Solo habilitar si NO es celular (ej. más de 768px de ancho)
+  return window.innerWidth > 768;
+}
+
+if (shouldEnableReload()) {
+  window.addEventListener("resize", function () {
+    clearTimeout(resizeTimer);
+    resizeTimer = setTimeout(() => {
+      location.reload();
+    }, 300); // espera 300ms después de que el usuario deja de redimensionar
+  });
+}
+</script>
 
 
 
